--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "mongodb": "^6.10.0",
+    "p-limit": "^6.1.0",
     "puppeteer": "^23.8.0"
   }
 }
