--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,8 +13,15 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "mongodb": "^6.10.0",
+    "mongoose": "^8.8.2",
     "p-limit": "^6.1.0",
     "puppeteer": "^23.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
