Fix SonarQube scan syntax for Windows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,10 +27,10 @@ jobs:
       - name: Run SonarQube Scan (Windows)
         shell: cmd
         run: |
-          sonar-scanner -Dsonar.projectKey=my_project \
-            -Dsonar.sources=${{ github.workspace }} \
-            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+          sonar-scanner -Dsonar.projectKey=my_project ^
+                        -Dsonar.sources=${{ github.workspace }} ^
+                        -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} ^
+                        -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
 
 
